# rp6502-rtc

./: CMakeLists.txt
src/: clock.c  clockgetres.c  clockgettime.c  clockgettimertc.c  getsn.c  getsn.h  gettime.c  print_time.c  settime.c  time.c  time_set.c  user_set_time.c  user_set_time.h
